# Pseudo3DEngine

./: CMakeLists.txt  LICENSE.txt  Player.cpp  Player.h  Skybox.h  World.cpp  World.h  main.cpp
assets/: map.json
